# XR-edu

./: .gitignore  CMakeLists.txt  resources
SupSI-GL/: Camera.cpp  Camera.h  DirectXRenderer.cpp  DirectXRenderer.h  Engine.cpp  Engine.h  Fbo.cpp  Light.cpp  Light.h  List.cpp  List.h  Object.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  OvoReader.h  PlatformRenderer.h  SupSI-GL.cbp  SupSI-GL.vcxproj  Texture.cpp  Vertex.cpp  oxr.cpp  oxr.h
TransformApp/: GL-SUPSI.cbp  GL-SUPSI.layout  GL-SUPSI.vcxproj  MainApplication.cpp  TransformApp.depend
demo-engine/: .gitignore  openvr.sln  vs2017 cmd.txt
demo-engine/SupSI-GL/: DirectXRenderer.h  Engine.cpp  Engine.h  Face.cpp  Face.h  Fbo.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h  Object.h  OpenGLRenderer.h  OvoReader.cpp  PlatformRenderer.h  Program.cpp  Program.h  SupSI-GL.depend  SupSI-GL.layout  Texture.h  Vertex.h  oxr.cpp  shader.cpp  shader.h
demo-engine/TransformApp/: MainApplication.cpp  TransformApp.cbp  TransformApp.layout
demo-engine/dependencies/openxr/lib/x64/Release/: openxr_loader.lib
demo-engine/resources/: BlackWindowBreak.dds  DarkMetal.dds  fire.dds  greyMetal.dds  propertyFile.txt  sand.dds  scena1.OVO  scena4.OVO
openvr/: CMakeLists.txt  main.cpp  openvr.vcxproj  ovr.h  winXR.cpp  xr.cpp
resources/: scena0.OVO  teapot.dds
sorgenti/: OpenGLRenderer.cpp  PlatformRenderer.h  oxr.cpp  oxr.h
tests/: .gitignore  CMakeLists.txt  openxr-tests.sln  openxr.sln
tests/openxr/: MockRenderer.h  OpenGLRenderer.cpp  fbo.h  main.cpp  openxr.vcxproj  oxr.cpp  oxr.h
tests/openxr-tests/: OpenGLRenderer.cpp  OpenGLRenderer.h  main.cpp  openxr-tests.vcxproj  oxr.cpp  shader.h
tutorial/: CMakeLists.txt
tutorial/openxr/: DirectXRenderer.cpp  OpenGLRenderer.cpp  PlatformRenderer.h  fbo.cpp  main.cpp  openxr.vcxproj  oxr.cpp  oxr.h  shader.cpp
